--- a/index.html
+++ b/index.html
@@ -4,57 +4,82 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
 <body>
-    <section class = "container">
-        <div class="row">
-            <div class="col-md-12">
-                <header>
-                    <nav class="navbar navbar-expand-md navbar-light bg-light">
-                        <a class="navbar-brand">Matthew Bishop</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav ml-auto">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">About <span
-                                            class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
-                        </div>
-                    </nav>
-                </header>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <a class="navbar-brand">Matthew Bishop</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+            </div>
+        </nav>
+    </header>
+
+    <section class="container">
+        <!-- add image to container -->
+        <div class="jumbotron mt-4">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1>About Me</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <img src="Assets/Images/200x200 stock image.png" class="mr-3 img-thumbnail float-left"
+                        alt="default-profile-picture">
+                    <p class="ml-2">Hello! As you can tell, my name is Matthew Bishop. I am a current student at the KU
+                        Coding
+                        Bootcamp.
+                        I have had 0 prior knowlege of coding and I'm very excited for what I am about to learn.
+                        I went to a tech school back in 2015 and got my A+ certification along with my Networking and
+                        Security certifications(they are expired now).
+                        I have 1 cat and 2 dogs. The cats name is Yooka and the 2 dogs are named Banjo and Kazooie
+                        (based
+                        off of the video game Banjo and Kazooie). I enjoy muscle cars! I currently own a 2011 Mustang
+                        GT. I
+                        use to
+                        own a motorcycle. I was unable to take it with me when I moved from Utah to Missouri. My
+                        favorite
+                        genre of music is Metal/Heavy Metal. My favorite band is Slipknot.
+                        Hello! As you can tell, my name is Matthew Bishop. I am a current student at the KU Coding
+                        Bootcamp.
+                        I have had 0 prior knowlege of coding and I'm very excited for what I am about to learn.
+                        I went to a tech school back in 2015 and got my A+ certification along with my Networking and
+                        Security certifications(they are expired now).
+                        I have 1 cat and 2 dogs. The cats name is Yooka and the 2 dogs are named Banjo and Kazooie
+                        (based
+                        off of the video game Banjo and Kazooie). I enjoy muscle cars! I currently own a 2011 Mustang
+                        GT. I
+                        use to
+                        own a motorcycle. I was unable to take it with me when I moved from Utah to Missouri. My
+                        favorite
+                        genre of music is Metal/Heavy Metal. My favorite band is Slipknot.
+                    </p>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-9">
-                <h1>About Me</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-2">
-                <img src="Assets/Images/200x200 stock image.png" class="img-thumbnail" alt="default-profile-picture">
-            </div>
-            <div class="col-md-6">
-                <p>Hello! As you can tell, my name is Matthew Bishop. I am a current student at the KU Coding Bootcamp. I have had 0 prior knowlege of coding and I'm very excited for what I am about to learn.
-                    I went to a tech school back in 2015 and got my A+ certification along with my Networking and Security certifications(they are expired now).
-                    I have 1 cat and 2 dogs. The cats name is Yooka and the 2 dogs are named Banjo and Kazooie (based off of the video game Banjo and Kazooie). I enjoy muscle cars! I currently own a 2011 Mustang GT. I use to 
-                    own a motorcycle. I was unable to take it with me when I moved from Utah to Missouri. My favorite genre of music is Metal/Heavy Metal. My favorite band is Slipknot. 
-                </p>
-            </div>
-        </div>
+        <footer>
+            <nav class="navbar navbar-dark bg-dark fixed-bottom">
+                <a class="navbar-brand" href="#">Fixed bottom</a>
+            </nav>
+        </footer>
     </section>
 </body>
 
