--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,26 @@
         <div class="jumbotron mt-4">
             <div class="row">
                 <div class="col-md-9">
-                    <h1>Portfolio</h1>
+                    <h1>Contact Me</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-
+                    <h3>Username</h3>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                            aria-describedby="basic-addon1">
+                    </div>
+                    <h3>Email</h3>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Recipient's username"
+                            aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    </div>
+                    <h3>Message</h3>
+                    <div class="input-group">
+                        <textarea class="form-control" placeholder="Message" aria-label="With textarea"></textarea>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-lg mt-5">Submit</button>
                 </div>
             </div>
         </div>
