--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                     </div>
                     <h3>Message</h3>
                     <div class="input-group">
-                        <textarea class="form-control" placeholder="Message" aria-label="With textarea"></textarea>
+                        <textarea class="form-control" rows="4" placeholder="Message" aria-label="With textarea"></textarea>
                     </div>
                     <button type="button" class="btn btn-primary btn-lg mt-5">Submit</button>
                 </div>
